--- a/index.html
+++ b/index.html
@@ -5,38 +5,38 @@
 </head>
 
 <body>
-  <a href="https://healthunlocked.com/johns" id="johnsHUWidget">Johns</a>
+  <a href="https://health-unlocked.com/johns" id="johnsHUWidget">Johns</a>
   <script>
      var _huq = [];
      _huq.push(['_createPostsWidget', 'johnsHUWidget', 'johns', 400]);
 
      (function () {
          var hu = document.createElement('script'); hu.type = 'text/javascript'; hu.async = true; hu.id = 'huscript';
-         hu.src = 'https://healthunlocked.com/bg/widget';
+         hu.src = 'https://health-unlocked.com/bg/widget';
          var s = document.getElementsByTagName('script')[document.getElementsByTagName('script').length - 1]; s.parentNode.insertBefore(hu, s);
      })();
   </script>
 
-  <a href="https://healthunlocked.com/starbrydge" id="starbrydgeHUWidget">Starbrydge</a>
+  <a href="https://health-unlocked.com/starbrydge" id="starbrydgeHUWidget">Starbrydge</a>
   <script>
      var _huq = [];
      _huq.push(['_createPostsWidget', 'starbrydgeHUWidget', 'starbrydge', 400]);
 
      (function () {
          var hu = document.createElement('script'); hu.type = 'text/javascript'; hu.async = true; hu.id = 'huscript';
-         hu.src = 'https://healthunlocked.com/bg/widget';
+         hu.src = 'https://health-unlocked.com/bg/widget';
          var s = document.getElementsByTagName('script')[document.getElementsByTagName('script').length - 1]; s.parentNode.insertBefore(hu, s);
      })();
   </script>
 
-  <a href="https://healthunlocked.com/juan" id="juanHUWidget">Juan</a>
+  <a href="https://health-unlocked.com/juan" id="juanHUWidget">Juan</a>
   <script>
      var _huq = [];
      _huq.push(['_createPostsWidget', 'juanHUWidget', 'juan', 400]);
 
      (function () {
          var hu = document.createElement('script'); hu.type = 'text/javascript'; hu.async = true; hu.id = 'huscript';
-         hu.src = 'https://healthunlocked.com/bg/widget';
+         hu.src = 'https://health-unlocked.com/bg/widget';
          var s = document.getElementsByTagName('script')[document.getElementsByTagName('script').length - 1]; s.parentNode.insertBefore(hu, s);
      })();
   </script>
