--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
      })();
   </script>
 
-  <a href="https://health-unlocked.com/starbrydge" id="starbrydgeHUWidget">Starbrydge</a>
+  <a href="https://health-unlocked.com/starbrydgehealth" id="starbrydgehealthHUWidget">starbrydgehealth</a>
   <script>
      var _huq = [];
-     _huq.push(['_createPostsWidget', 'starbrydgeHUWidget', 'starbrydge', 400]);
+     _huq.push(['_createPostsWidget', 'starbrydgehealthHUWidget', 'starbrydgehealth', 400]);
 
      (function () {
          var hu = document.createElement('script'); hu.type = 'text/javascript'; hu.async = true; hu.id = 'huscript';
