--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-  <a href="https://anderslundback.com" id="alurl">anderslundback.com</a>
+  <a href="http://www.anderslundback.com" id="alurl">anderslundback.com</a>
 
 </body>
 </html>
