--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Anders Lundback Github page</title>
+  <title>Anders Lundback</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-  Hi.
-
-
+  Let's remake this site in react.
+  <script src="js/main.js"></script>
 </body>
 </html>
